tests/type-errors/no_effect_local_var_in_formula.arl
archetype no_effect_local_var_in_formula

asset myasset {
  id: string;
} shadow {
  s: int = 0;
} with {
  a1: s >= 0
}

entry exec (k : asset_key<myasset>) {
  specification {
    postcondition s1 {
      m.s = 2
    }
  }
  effect {
    var m : myasset = {id = k};
  }
}
